# DailyTracker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  001_initial_users.py  002_todos.py  003_habits.py  004_weight_macros.py  005_meals.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/domain/: habits.py  macros.py  recurrence.py
backend/app/models/: habit.py  macro.py  meal.py  todo.py  user.py  weight.py
backend/app/routers/: auth.py  dashboard.py  habits.py  macros.py  meals.py  todos.py  weight.py
backend/tests/: conftest.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  style.css
frontend/src/__tests__/: router.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: Breadcrumbs.tsx  Footer.tsx  Header.tsx
frontend/src/components/__tests__/: Breadcrumbs.test.tsx  Header.test.tsx
frontend/src/features/auth/: index.ts
frontend/src/features/habits/: index.ts
frontend/src/features/macros/: index.ts
frontend/src/features/meals/: index.ts
frontend/src/features/todos/: index.ts
frontend/src/routes/: ProtectedRoute.tsx  contact.tsx  error-page.tsx  index.tsx  root.tsx
frontend/src/sections/: HomeFeatures.tsx  HomeHero.tsx
frontend/src/test/: test-utils.tsx
(+55 files in other folders)
